@@ -24,6 +24,8 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -142,11 +144,11 @@ public class Plugin implements Comparable<Plugin> {
 		return info.getVersion();
 	}
 
-	public URL toURL() throws MalformedURLException {
+	public URL toURL() throws MalformedURLException, URISyntaxException {
 		if (file.isDirectory()) {
-			return (file.toURI().toURL());
+			return file.toURI().toURL();
 		} else {
-			return (new URL("jar:file:" + file.getAbsolutePath() + "!/"));
+			return new URI("jar:file:" + file.getAbsolutePath() + "!/").toURL();
 		}
 	}
 
